Perfected styling of p elements in schedule

--- a/index.html
+++ b/index.html
@@ -165,24 +165,24 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
 						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Vinyasa Flow">
-						<p><strong>Vinyasa Flow</strong></p>
-						<p>Tuesdays, 7:00pm</p>
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Vinyasa Flow</strong></p>
+						<p style="font-size:14px">Tuesdays, 7:00pm</p>
 					</div>
 				</div>
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
 						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Rooftop">
-						<p><strong>Rooftop Yoga</strong></p>
-						<p>Thursdays, 7:00pm</p>
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Rooftop Yoga</strong></p>
+						<p style="font-size:14px">Thursdays, 7:00pm</p>
 					</div>
 				</div>
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
 						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Meditation">
-						<p><strong>Candlelight Meditation</strong></p>
-						<p>Sundays, 4:00pm</p>
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Candlelight Meditation</strong></p>
+						<p style="font-size:14px">Sundays, 4:00pm</p>
 					</div>
 				</div>
 			</div>
@@ -198,23 +198,19 @@
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="text-wrap" style="font-size:14px;">
-								<strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know where to go!"</strong>
+							<blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know where to go!"
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
-                        <blockquote class="text-wrap" style="font-size:14px;">
-								<strong>"As a member,
+                        <blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a member,
                                  I love that I can find class details on Infinity's website,
-                                so I know exactly when to go!"</strong>
+                                so I know exactly when to go!"
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
-							 <blockquote class="text-wrap" style="font-size:14px;">
-								<strong>"As an Infinity member, I can reach out to the studio from their website, 
-                                so I never have to go out of my way."</strong>
+							<blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center"> "As an Infinity member, I can reach out to the studio from their website, so I never have to go out of my way."
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Sara Solar, Infinity Yoga Student
 							</p>
