Styled thumbnail imgs and added border radius effect

--- a/index.html
+++ b/index.html
@@ -164,71 +164,73 @@
 			<div class="row h-100 align-items-center text-center slide">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Vinyasa Flow">
-						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Vinyasa Flow</strong></p>
+						<img src="assets/images/vinyasa.jpg" class="img-thumbnail img-rounded" style="width: 100%; height: 100%;border-radius:5%;" alt="Vinyasa Flow">
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px">
+							<strong>Vinyasa Flow</strong></p>
 						<p style="font-size:14px">Tuesdays, 7:00pm</p>
 					</div>
 				</div>
-
+	
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Rooftop">
-						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Rooftop Yoga</strong></p>
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail img-rounded" style="width: 100%; height: 100%;border-radius:5%;" alt="Rooftop">
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px">
+							<strong>Rooftop Yoga</strong></p>
 						<p style="font-size:14px">Thursdays, 7:00pm</p>
 					</div>
 				</div>
-
+	
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Meditation">
-						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px"><strong>Candlelight Meditation</strong></p>
+						<img src="assets/images/meditate.jpg" class="img-thumbnail img-rounded" style="width: 100%; height: 100%; border-radius:5%;" alt="Meditation">
+						<p style="text-transform:uppercase; letter-spacing:1px;padding-top:10px">
+							<strong>Candlelight Meditation</strong></p>
 						<p style="font-size:14px">Sundays, 4:00pm</p>
 					</div>
 				</div>
 			</div>
-			<!--Quotes Carousel-->
-			<h3 class="text-center quotes">What Our Members Say</h3>
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
-					<!--Indicators-->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>
-					<!--Wrapper for slides-->
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know where to go!"
-							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
-						</div>
-						<div class="carousel-item">
-                        <blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a member,
-                                 I love that I can find class details on Infinity's website,
-                                so I know exactly when to go!"
-							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
-						</div>
-						<div class="carousel-item">
-							<blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center"> "As an Infinity member, I can reach out to the studio from their website, so I never have to go out of my way."
-							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal;">Sara Solar, Infinity Yoga Student
-							</p>
-						</div>
-					</div>
-					<!--Left and right controls-->
-					<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-						<div><i class="fas fa-chevron-left fa-fw" aria-hidden="true"></i></div>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-						<div><i class="fas fa-chevron-right fa-fw" aria-hidden="true"></i></div>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
+	<!--Quotes Carousel-->
+	<h3 class="text-center quotes">What Our Members Say</h3>
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!--Indicators-->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+		    </ol>
+	<!--Wrapper for slides-->
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know where to go!"
+				</blockquote>
+                    <p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
+             </div>
+			
+            <div class="carousel-item">
+                 <blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center">"As a member, I love that I can find class details on Infinity's website, so I know exactly when to go!"
+				</blockquote>
+                    <p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 			</div>
-			<!--./quotes-carousel-->
+			<div class="carousel-item">
+                <blockquote class="text-wrap" style="font-size:14px;font-weight:400;text-align:center"> "As an Infinity member, I can reach out to the studio from their website, so I never have to go out of my way."
+			    </blockquote>
+					<p class="blockquote-footer" style="font-style:normal;">Sara Solar, Infinity Yoga Student
+					</p>
+			</div>
 		</div>
+<!--Left and right controls-->
+	<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+		<div><i class="fas fa-chevron-left fa-fw" aria-hidden="true"></i></div>
+			<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+		<div><i class="fas fa-chevron-right fa-fw" aria-hidden="true"></i></div>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+</div>
+<!--./quotes-carousel-->
+</div>
 </section>
 <!--./schedule-->
 
