--- a/index.html
+++ b/index.html
@@ -46,12 +46,31 @@
 				<a class="nav-link" href="#contact">Contact</a>
 			</li>
 		</ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-         </form>
-        </div>
-	</nav>
+    <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link waves-effect waves-light">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link waves-effect waves-light">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link waves-effect waves-light">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link waves-effect waves-light">
+              <i class="fab fa-pinterest"></i>
+            </a>
+          </li>
+        </ul>
+    </div>
+</nav>
+
     <!--./navbar-->
 </header>
 <!--./header-->
