--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 		</ul>
     <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link waves-effect waves-light">
+            <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect waves-light">
+            <a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect waves-light">
+            <a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
         <li class="nav-item">
-            <a class="nav-link waves-effect waves-light">
+            <a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
               <i class="fab fa-pinterest"></i>
             </a>
           </li>
