--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 				<a class="nav-link" href="#contact">Contact</a>
 			</li>
 		</ul>
-    <ul class="nav navbar-nav ml-auto">
+<!---->
+    <ul class="nav navbar-right ml-auto">
           <li class="nav-item">
             <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
               <i class="fab fa-twitter"></i>
