Uploaded favicon image and added it to website pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<!-- Custom Stylesheet -->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
-	<title>Infinity Yoga | Yoga and Meditation Studio in New York, NY </title>
+	<title>Infinity Yoga | Yoga and Meditation in NYC </title>
+    <!--Favicon Link-->
+    <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico"/>
 </head>
 
 <!-- Body -->
