--- a/404.html
+++ b/404.html
@@ -14,7 +14,9 @@
 	<!-- Custom Stylesheet -->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
-	<title>Infinity Yoga | 404 Error </title>
+	<title>Infinity Yoga | Yoga and Meditation in NYC </title>
+     <!--Favicon Link-->
+     <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico"/>
 </head>
 <body>
 <div id="notfound">
