Updated comments in landing page and beautified code

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<a class="nav-link" href="#contact">Contact</a>
 			</li>
 		</ul>
-<!---->
+<!--Social Media Links-->
     <ul class="nav navbar-right ml-auto">
           <li class="nav-item">
             <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
@@ -73,8 +73,7 @@
         </ul>
     </div>
 </nav>
-
-    <!--./navbar-->
+ <!--./navbar-->
 </header>
 <!--./header-->
 
@@ -114,7 +113,7 @@
 			<div class="flex-column col-12">
 				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a
 					flexible schedule and fair prices. We love what we do and we believe everybody should experience the
-					peace, love &amp; eternal happiness we feel at our studio.
+					peace, love &amp; eternal happiness that we feel at our studio.
 			</p>
 		</div>
 	</div>
@@ -173,9 +172,10 @@
         </div>
     </div>
 </section>
+<!--./about-->
 
 <!-- Schedule Section-->
-    <!-- This code was copied from & inspired by W3Schools.com
+<!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="schedule">
 	<div id="schedule" class="container-wrapper-blue">
@@ -254,7 +254,7 @@
 <!--./quotes-carousel-->
 </div>
 </section>
-<!--./schedule-->
+<!--./schedule-section-->
 
 <!--Contact Section-->
     <!-- This code was copied from & inspired by W3Schools.com
@@ -289,6 +289,7 @@
 			<!-- Image of location/map -->
 			<img src="assets/images/map.jpg" alt="map" style="width:100%;">
 </section>
+<!--./contact-section-->
 </main>
 <!--Footer-->
 <section class="footer">
@@ -299,7 +300,10 @@
 		<h6>2020 Alissa Troiano | Code Institute Project</h6>
 	</footer>
 </section>
+<!--./footer-->
 
+<!--jQuery Syntax for animations here-->
+<!--copied from https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <script>
 $(document).ready(function(){
      $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
