Updated all sections with ids to improve consistency

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     <ul class="nav navbar-right ml-auto">
           <li class="nav-item">
             <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-twitter-square"></i>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
-              <i class="fab fa-facebook"></i>
+              <i class="fab fa-facebook-square"></i>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
-              <i class="fab fa-instagram"></i>
+              <i class="fab fa-instagram-square"></i>
             </a>
           </li>
         <li class="nav-item">
@@ -98,8 +98,8 @@
 <!--./jumbotron-container-->
 
 <!--About-->
-<section class="about">
-	<div id="about" class="container container-fluid">
+<section id="about">
+	<div class="container container-fluid">
 		<div class="row">
 			<div class="col-12 col-6">
 				<h2 class="section-header">About Us</h2>
@@ -176,13 +176,13 @@
 <!-- Schedule Section-->
 <!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
-<section class="schedule">
-	<div id="schedule" class="container-wrapper-blue">
+<section id="schedule">
+	<div class="container-wrapper-blue">
 		<div class="container-fluid">
 			<h2>Schedule</h2>
 			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
-			<div class="row h-100 align-items-center text-center slide">
+			<div class="row h-100 align-items-center text-center">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
 						<img src="assets/images/vinyasa.jpg" class="img-thumbnail img-rounded" style="width: 100%; height: 100%;border-radius:5%;" alt="Vinyasa Flow">
@@ -258,8 +258,8 @@
 <!--Contact Section-->
     <!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
-<section class="contact">
-	<div id="contact" class="container-fluid">
+<section id="contact">
+	<div class="container-fluid">
 		<h2 class="text-center">Contact Us</h2>
 		<div class="row">
 			<div class="col-12 col-6">
@@ -291,7 +291,7 @@
 <!--./contact-section-->
 </main>
 <!--Footer-->
-<section class="footer">
+<section id="footer">
 	<footer class="container-fluid text-center">
 		<a href="#myPage" title="To Top">
 			<i class="fas fa-chevron-up"></i>
