--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	</div>
     <!--Why Infinity Container-->
     <div class="container-fluid text-center">
-	    <h3 class="about-header text-break text-lg-center">Why Infinity?</h3>
+	    <h3 class="about-header">Why Infinity?</h3>
 	        <div class="row">
 		        <div class="col-12 col-md-6 col-lg-4">
 			        <div class="about">
