Repaired all h2 elements to improve consistency

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <section id="schedule">
 	<div class="container-wrapper-blue">
 		<div class="container-fluid">
-			<h2>Schedule</h2>
+			<h2 class="section-header">Schedule</h2>
 			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
 			<div class="row h-100 align-items-center text-center">
@@ -260,7 +260,8 @@
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section id="contact">
 	<div class="container-fluid">
-		<h2 class="text-center">Contact Us</h2>
+		<h2 class="section-header">Contact Us</h2>
+        <hr>
 		<div class="row">
 			<div class="col-12 col-6">
 				<p style="padding-top:20px;"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
