--- a/index.html
+++ b/index.html
@@ -99,77 +99,57 @@
 
 <!--About-->
 <section id="about">
-	<div class="container container-fluid">
+	<div class="container-fluid text-center">
+		<h3 class="about-header">Why Infinity?</h3>
 		<div class="row">
-			<div class="col-12 col-6">
-				<h2 class="section-header">About Us</h2>
-				<hr>
+			<div class="col-xs-8 col-sm-4">
+				<div class="about">
+					<i class="fas fa-brain d-sm-block"></i>
+					<h4 class="about-header">Mind</h4>
+					<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
+				</div>
+			</div>
+			<div class="col-xs-8 col-sm-4">
+				<div class="about">
+					<i class="fas fa-fire-alt d-sm-block"></i>
+					<h4 class="about-header">Body</h4>
+					<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+				</div>
+			</div>
+			<div class="col-xs-8 col-sm-4">
+				<div class="about">
+					<i class="fas fa-praying-hands d-sm-block"></i>
+					<h4 class="about-header">Spirit</h4>
+					<p class="display-4 about-content">Find your inner strength through meditation.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="flex-column col-12">
-			</div>
-			<div class="flex-column col-12">
-				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a
-					flexible schedule and fair prices. We love what we do and we believe everybody should experience the
-					peace, love &amp; eternal happiness that we feel at our studio.
-			</p>
-		</div>
-	</div>
-    <!--Why Infinity Container-->
-    <div class="container-fluid text-center">
-	    <h3 class="about-header">Why Infinity?</h3>
-	        <div class="row">
-		        <div class="col-12 col-md-6 col-lg-4">
-			        <div class="about">
-				        <i class="fas fa-brain d-sm-block"></i>
-				        <h4 class="about-header">Mind</h4>
-				        <p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
-			        </div>
-		        </div>
-		        <div class="col-12 col-md-6 col-lg-4">
-			        <div class="about">
-				        <i class="fas fa-fire-alt d-sm-block"></i>
-				            <h4 class="about-header">Body</h4>
-				                <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
-			                        </div>
-		                                </div>
-		        <div class="col-12 col-md-6 col-lg-4">
-			        <div class="about">
-				        <i class="fas fa-praying-hands d-sm-block"></i>
-				            <h4 class="about-header">Spirit</h4>
-				                <p class="display-4 about-content">Find your inner strength through meditation.
-				                </p>
-			                    </div>
-		                    </div>
-		    <div class="row">
-			    <div class="col-12 col-md-6 col-lg-4">
-				        <div class="about">
+			<div class="col-xs-8 col-sm-4">
+				<div class="about">
 					<i class="fas fa-peace  d-sm-block"></i>
 					<h4 class="about-header">Peace</h4>
 					<p class="display-4 about-content">Forget all the stress and focus on you.
 					</p>
 				</div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-4">
+			<div class="col-xs-8 col-sm-4">
 				<div class="about">
-					     <i class="fas fa-heart d-sm-block"></i>
-					        <h4 class="about-header">Love</h4>
-					            <p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
-                                </div>
-                            </div>
-            <div class="col-12 col-md-6 col-lg-4">
+					<i class="fas fa-heart d-sm-block"></i>
+					<h4 class="about-header">Love</h4>
+					<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+				</div>
+			</div>
+			<div class="col-xs-8 col-sm-4">
 				<div class="about">
 					<i class="fas fa-yin-yang d-sm-block"></i>
-					    <h4 class="about-header">Harmony </h4>
-					        <p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
-                        </div>
-                    </div>
-                </div>
-<!--./why-infinity-container-->
-            </div>
-        </div>
-    </div>
+					<h4 class="about-header">Harmony </h4>
+					<p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+				</div>
+			</div>
+			<!--./why-infinity-container-->
+		</div>
+	</div>
 </section>
 <!--./about-->
 
