Removed unused inline styles to clean up code

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 				<div class="col-xs-8 col-sm-4">
 					<div class="text-center">
-						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded mx-auto d-block" style="width: 100%; height: 100%;border-radius:5%;" alt="Rooftop">
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded mx-auto d-block" alt="Rooftop">
 						<h6>
 							<strong>Rooftop Yoga</strong></h6>
 						<p class="text-muted">Thursdays, 7:00pm</p>
@@ -183,7 +183,7 @@
 
 				<div class="col-xs-8 col-sm-4">
 					<div class="text-center">
-						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded mx-auto d-block" style="width: 100%; height: 100%; border-radius:5%;" alt="Meditation">
+						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded mx-auto d-block" alt="Meditation">
 						<h6>
 							<strong>Raiki</strong></h6>
 						<p class="text-muted">Sundays, 4:00pm</p>
