Revised classes for schedule section

--- a/index.html
+++ b/index.html
@@ -164,28 +164,25 @@
 			<p class="schedule-content">We hope to see you soon!</p>
 			<div class="row">
 				<div class="col-xs-8 col-sm-4">
-					<div class="text-center">
-						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded mx-auto d-block" alt="Vinyasa Flow">
-						<h6>
-							<strong>Vinyasa Flow</strong></h6>
+				<div class="text-center">
+						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" alt="Vinyasa Flow">
+						<h6><strong>Vinyasa Flow</strong></h6>
 						<p class="text-muted">Tuesdays, 7:00pm</p>
-					</div>
 				</div>
+			</div>
 
 				<div class="col-xs-8 col-sm-4">
 					<div class="text-center">
-						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded mx-auto d-block" alt="Rooftop">
-						<h6>
-							<strong>Rooftop Yoga</strong></h6>
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" alt="Rooftop">
+						<h6><strong>Rooftop Yoga</strong></h6>
 						<p class="text-muted">Thursdays, 7:00pm</p>
 					</div>
 				</div>
 
 				<div class="col-xs-8 col-sm-4">
 					<div class="text-center">
-						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded mx-auto d-block" alt="Meditation">
-						<h6>
-							<strong>Raiki</strong></h6>
+						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" alt="Meditation">
+						<h6><strong>Raiki</strong></h6>
 						<p class="text-muted">Sundays, 4:00pm</p>
 					</div>
 				</div>
