Resized columns in contact to improve visibility

--- a/index.html
+++ b/index.html
@@ -246,30 +246,29 @@
 	<div class="container-fluid">
 		<h2 class="section-header">Contact Us</h2>
         <hr>
+<div class="row">
+	<div class="col-xs-8 col-sm-4">
+		<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
+		<p class="text-sm-left"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+		<p class="text-sm-left"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
+	</div>
+	<div class="col-xs-4 col-sm-8">
 		<div class="row">
-			<div class="col-12 col-6">
-				<p style="padding-top:20px;"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
-				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
-				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
-			</div>
-			<div class="col-12 col-6">
+			<div class="form-group">
+				<input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
+                </div>
+				<div class="form-group">
+					<input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
+                </div>
+				</div>
+				<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="3"></textarea>
 				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4 form-group">
-						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-                </div>
-						<div class="col-12 col-md-6 col-lg-4 form-group">
-							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-                </div>
-						</div>
-						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea>
-						<div class="row">
-							<div class="col-12 col-sm-12 form-group">
-								<button class="btn btn-info float-right" type="submit">Send</button>
-							</div>
-						</div>
+					<div class="col-12 col-sm-12 form-group">
+						<button class="btn btn-info float-right" type="submit">Send</button>
 					</div>
 				</div>
 			</div>
+		</div>
 			<!-- Image of location/map -->
 			<img src="assets/images/map.jpg" alt="map" style="width:100%;">
 </section>
