Add and style hr elements to all section headers

--- a/index.html
+++ b/index.html
@@ -98,8 +98,26 @@
 		</section>
 		<!--./jumbotron-container-->
 
-		<!--About-->
-		<section id="about">
+<!--About-->
+<section id="about">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12 col-6">
+				<h2 class="section-header">About Us</h2>
+				<hr>
+			</div>
+		</div>
+		<div class="row">
+			<div class="flex-column col-12">
+			</div>
+			<div class="flex-column col-12">
+				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a
+					flexible schedule and fair prices. We love what we do and we believe everybody should experience the
+					peace, love &amp; eternal happiness that we feel at our studio.
+			</p>
+		</div>
+	</div>
+<!--Why Infinity Container-->
 			<div class="container-fluid text-center">
 				<h3 class="about-header">Why Infinity?</h3>
 				<div class="row">
